# Poliedros

./: .gitignore  README.md  io.github.kriptolix.Poliedros.json  io.gitlab.kriptolix.Poliedros.json  io.gitlab.kriptolix.Reinput.json  meson.build  notes.md  poliedros.gresource.xml  poliedros.in  reinput.gresource.xml  reinput.in
.flatpak/flatpak-builder/checksums/: x86_64-io.gitlab.kriptolix.Reinput.json
data/: io.github.kriptolix.Poliedros.desktop.in  io.github.kriptolix.Poliedros.gschema.xml  io.github.kriptolix.Poliedros.metainfo.xml.in  io.github.kriptolix.Poliedros.service.in  io.gitlab.kriptolix.Poliedros.desktop.in  io.gitlab.kriptolix.Poliedros.gschema.xml  io.gitlab.kriptolix.Poliedros.metainfo.xml.in  io.gitlab.kriptolix.Poliedros.service.in  io.gitlab.kriptolix.Reinput.desktop.in  io.gitlab.kriptolix.Reinput.gschema.xml  io.gitlab.kriptolix.Reinput.metainfo.xml.in  io.gitlab.kriptolix.Reinput.service.in  meson.build  poliedros.css
data/icons/: meson.build
po/: LINGUAS  POTFILES.in  de.mo  de.po  io.gitlab.kriptolix.Poliedros.pot  meson.build  poliedros.pot  poliedros.pot.old  pt_BR.mo  pt_BR.po
src/: application.py  commandparser.py  executor.py  reference.js  regexpatterns.py  roller-bkp.py  roller.old.py  roller.py  tests.py  util.py
src/gtk/ui/: AdvancedMode.ui  Dialog.ui  DiceArea.ui  DicePool.ui  EmptyPage.ui  FunctionBody.ui  InfoArea.ui  LogArea.ui  LogEntry.ui  MainWindow.ui  Menu.ui  NumberPopover.ui  RemapInput.ui  RemapOutput.ui  RemappingGroup.ui  RollArea.ui  SideBar.ui  (+8 more)
src/tests/: scanner.py  tests.py  teststrings.py  yurimonocerus.py
(+21 files in other folders)
